# transfer-learning-mieeg

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  PLAN.md  README.md  main.py  patch.py  patch_pooch.py  pyproject.toml  skills-lock.json  test.py
.specstory/: .project.json  statistics.json
.specstory/history/: 2026-04-12_10-28-13Z-eeg-model-development-and-training-pipeline.md  2026-04-12_18-48-44Z-architecture-analysis-and-improvement-suggestions.md  2026-04-12_22-26-47Z-module-import-errors-in-python-script.md  2026-04-15_14-09-58Z-updating-architecture-analysis-for-new-codebase.md  2026-04-26_06-20-19Z-model-validation-and-generalizability-analysis.md  2026-04-26_17-15-03Z-pretrained-model-analysis-and-finetuning-strategy.md  2026-04-26_19-57-10Z-analyze-the-codebase-first.md  2026-04-27_06-20-04Z-running-pretraining-with-new-plan-implementation.md  2026-04-27_06-21-29Z-context-from-my-ide.md  2026-04-29_15-38-42Z-alternatives-to-json-for-tracking-model-configurations.md  2026-05-02_05-21-06Z-untitled.md  2026-05-02_05-36-14Z-untitled.md  2026-05-03_05-26-04Z-general-greeting-and-introduction.md  2026-05-04_05-04-16Z-untitled.md  (+1 more)
data/: __init__.py  loader.py
models/: __init__.py  cnn.py  heads.py  model.py  tokenizer.py  vit.py
results/: README.md
scripts/: check_moabb_download_status.py  compare_subject_signal_quality.py  run_pretrain_then_bnci_test.sh
tests/: test_transfer_setup.py
training/: __init__.py  finetune.py  loso.py  pretrain.py  pretrain_cross_dataset.py  run.py  utils.py  within_subject.py
utils/: __init__.py  reproducibility.py
(+207 files in other folders)
