[project]
name = "transfer-learning-bci-new"
version = "0.1.0"
description = "Transfer Learning Based Motor Imagery EEG Classification with Reduced Data"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Deep Learning
    "torch>=2.1.0,<2.6.0",
    "torchvision>=0.16.0,<0.21.0",
    "timm>=1.0.0",
    "transformers>=4.37.0",
    # EEG Processing
    "mne>=1.8.0",
    "moabb>=1.2.0,<1.4.2",
    # Signal Processing
    "pywavelets>=1.8.0",
    # Riemannian Geometry
    "pyriemann>=0.7",
    # Scientific Computing
    "numpy>=1.24.0,<2.2.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.5.0",
    # Visualization
    "matplotlib>=3.9.0",
    "seaborn>=0.12.1",
    # Configuration
    "pyyaml>=6.0",
    # Experiment Tracking
    "tensorboard>=2.18.0",
    # Progress bars
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]
torchvision = [{ index = "pytorch-cu121" }]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[dependency-groups]
dev = [
    "graphifyy>=0.3.17",
]
